Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/importscope/ImportInaccessible.out
ImportInaccessible.java:11:35: compiler.err.cant.resolve.location: kindname.class, Inner, , , (compiler.misc.location: kindname.class, p.ImportInaccessible, null)
1 error
